--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "mongoose-data-seed": "^2.1.3"
+  },
+  "mdSeed": {
+    "seedersFolder": "seeds",
+    "customSeederTemplate": "./md-seed-template.ejs"
   }
 }
