Capitalize validation added

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8000
-DB_URI=mongodb://localhost/travelsite-graphql
+DB_URI=mongodb://localhost/travelsite-new
 MONGO_URL=mongodb://localhost/travelsite-new
+
+VALID_REGION_NAMES="Asia,Africa,Nort America,South America,Caribbean,Middle East,Australia / Oceania,Europe"
