--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travelsitegraphql",
+  "name": "travelsitenew",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -14,11 +14,20 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
+    "helmet": "^3.21.2",
     "mongoose": "^5.6.4",
     "mongoose-data-seed": "^2.1.3"
   },
   "mdSeed": {
     "seedersFolder": "seeds",
     "customSeederTemplate": "./md-seed-template.ejs"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
